# LaserCAD-R14

./: .gitignore  .prettierignore  .taurignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  design.md  eslint.config.js  index.html  package-lock.json  package.json  plan.md  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
assets/css/: app.css  reset.css  theme.css
docs/: atalhos.md  build-local.md  design.md  plan.md  shortcuts.md
docs/adr/: 0001-arquitetura-base.md  0001-base-architecture.md  0002-integration-risks.md  0002-riscos-de-integracao.md
docs/product/: README.md  backlog.md  product-owner-agent.md
docs/release/: 1.0.md
specs/: event-bus.md  index-html.md  main.md
specs/_conventions/: namespace.md  state-contract.md
specs/app/: app-state-and-shortcuts.md  bootstrap.md
specs/render/: camera.md  entity-renderers.md  grid.md  overlays.md  svg-root.md
specs/tools/: select-tool.md  tool-manager.md
specs/ui/: command-line.md  dialogs.md  menubar.md  statusbar.md  toolbar.md
src/: main.js  main.ts  tauri-bridge.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: bootstrap.js  bootstrap.ts  config.js  config.ts  event-bus.js  event-bus.ts  shortcuts.js  shortcuts.ts  state.js  state.test.ts  state.ts
src/core/: types.ts
src/io/: autosave.js  autosave.ts  export-svg.js  export-svg.ts  file-actions.ts  file-download.js  file-download.ts  import-svg.test.ts  (+1 more)
tests/: setup.ts
(+90 files in other folders)
