[package]
name = "lasercad"
version = "1.0.0"
description = "LaserCAD R14 — 2D CAD for laser cutting"
authors = ["LaserCAD contributors"]
license = "MIT OR Apache-2.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "lasercad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
